--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -17,7 +17,10 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'css/tailwind.output.styles.css' %}"
+    />
   </head>
 
   <body>
