--- a/baseapp/static/baseapp/css/tailwind.output.styles.css
+++ b/baseapp/static/baseapp/css/tailwind.output.styles.css
@@ -513,28 +513,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: sticky;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .block {
   display: block;
 }
 
-.flex {
-  display: flex;
-}
-
 .table {
   display: table;
-}
-
-.grid {
-  display: grid;
 }
 
 .contents {
@@ -545,22 +529,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-28 {
-  height: 7rem;
-}
-
-.basis-1\/6 {
-  flex-basis: 16.666667%;
-}
-
-.basis-5\/6 {
-  flex-basis: 83.333333%;
-}
-
 .border-collapse {
   border-collapse: collapse;
 }
@@ -569,128 +537,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: var(--tw-transform);
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.place-items-center {
-  place-items: center;
-}
-
-.overflow-scroll {
-  overflow: scroll;
-}
-
-.scroll-smooth {
-  scroll-behavior: smooth;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .border {
   border-width: 1px;
-}
-
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-
-.border-r-4 {
-  border-right-width: 4px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.from-rose-500 {
-  --tw-gradient-from: #f43f5e;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(244 63 94 / 0));
-}
-
-.from-rose-900 {
-  --tw-gradient-from: #881337;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(136 19 55 / 0));
-}
-
-.from-slate-300 {
-  --tw-gradient-from: #cbd5e1;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(203 213 225 / 0));
-}
-
-.via-red-500 {
-  --tw-gradient-stops: var(--tw-gradient-from), #ef4444, var(--tw-gradient-to, rgb(239 68 68 / 0));
-}
-
-.via-red-900 {
-  --tw-gradient-stops: var(--tw-gradient-from), #7f1d1d, var(--tw-gradient-to, rgb(127 29 29 / 0));
-}
-
-.via-gray-300 {
-  --tw-gradient-stops: var(--tw-gradient-from), #d1d5db, var(--tw-gradient-to, rgb(209 213 219 / 0));
-}
-
-.to-pink-500 {
-  --tw-gradient-to: #ec4899;
-}
-
-.to-pink-900 {
-  --tw-gradient-to: #831843;
-}
-
-.to-zinc-300 {
-  --tw-gradient-to: #d4d4d8;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.px-1\.5 {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.font-acme {
-  font-family: Acme, sans-serif;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-neutral-50 {
-  --tw-text-opacity: 1;
-  color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
 .filter {
@@ -699,10 +547,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.w-340 {
-  width: 85rem;
 }
 
 .no-scrollbar::-webkit-scrollbar {
@@ -957,11 +801,90 @@ Ensure the default browser behavior of the `hidden` attribute.
   fill: #facc15;
 }
 
-.hover\:bg-gradient-to-r:hover {
+/* ADMIN PANEL PAGE */
+
+.admin-panel-background {
+  display: grid;
+  height: 100vh;
+  place-items: center;
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #f43f5e;
+  --tw-gradient-stops: var(--tw-gradient-from), #ef4444, var(--tw-gradient-to, rgb(239 68 68 / 0));
+  --tw-gradient-to: #ec4899;
+  font-family: Acme, sans-serif;
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
-.hover\:text-neutral-900:hover {
+.admin-panel {
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5rem;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #881337;
+  --tw-gradient-stops: var(--tw-gradient-from), #7f1d1d, var(--tw-gradient-to, rgb(127 29 29 / 0));
+  --tw-gradient-to: #831843;
+  width: 85rem;
+  height: 40.5rem;
+}
+
+.admin-panel-header {
+  display: grid;
+  height: 7rem;
+  place-items: center;
+  border-bottom-width: 4px;
+  text-align: center;
+}
+
+.admin-panel-title {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.admin-panel-body {
+  display: flex;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.admin-panel-nav-section {
+  flex-basis: 16.666667%;
+  border-right-width: 4px;
+  padding: 1rem;
+}
+
+.admin-panel-tab {
+  margin-top: 2.5rem;
+  cursor: pointer;
+  border-radius: 0.125rem;
+  border-bottom-width: 2px;
+  --tw-gradient-from: #cbd5e1;
+  --tw-gradient-stops: var(--tw-gradient-from), #d1d5db, var(--tw-gradient-to, rgb(209 213 219 / 0));
+  --tw-gradient-to: #d4d4d8;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.admin-panel-tab:hover {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
   --tw-text-opacity: 1;
   color: rgb(23 23 23 / var(--tw-text-opacity));
+}
+
+.admin-panel-selected-tab-content {
+  flex-basis: 83.333333%;
+  overflow: scroll;
+  scroll-behavior: smooth;
+  padding: 1rem;
+}
+
+.admin-panel-selected-tab-content::-webkit-scrollbar {
+  display: none;
+}
+
+.admin-panel-selected-tab-content {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
