General Git Push

--- a/baseapp/templates/baseapp/admin-panel.html
+++ b/baseapp/templates/baseapp/admin-panel.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="{% static 'baseapp/css/tailwind.output.styles.css' %}"
     />
-    <title>Admin Panel</title>
+    <title>Admin Panel | Beats Verse</title>
   </head>
   <body>
     <div class="admin-panel-background">
