--- a/baseapp/static/baseapp/css/tailwind.output.styles.css
+++ b/baseapp/static/baseapp/css/tailwind.output.styles.css
@@ -558,6 +558,72 @@ Ensure the default browser behavior of the `hidden` attribute.
   scrollbar-width: none;
 }
 
+/* LOGIN PAGE */
+
+.login-page {
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity));
+  width: 85rem;
+  height: 40.5rem;
+}
+
+.application-title {
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.login-page-greeting-msg {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.login-form {
+  display: grid;
+  place-items: center;
+  gap: 1.5rem;
+}
+
+.user-instruction {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.user-login-input {
+  width: 24rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity));
+}
+
+.login-btn {
+  width: 7rem;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
+}
+
+.login-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+/* DASHBOARD PAGE */
+
 .dashboard-background {
   display: grid;
   height: 100vh;
@@ -572,6 +638,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .dashboard {
+  position: relative;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -580,6 +647,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
   width: 85rem;
   height: 40.5rem;
+}
+
+.dashboard-side-nav {
+  position: absolute;
+  height: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .dashboard-header {
@@ -638,9 +712,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
   padding: 2rem;
-}
-
-.my-profile-tab {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
@@ -799,6 +870,72 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .dashboard-tab-icon:hover {
   fill: #facc15;
+}
+
+/* GUILDS TAB */
+
+.guilds-tab {
+  display: grid;
+  place-items: center;
+}
+
+.user-selected-guild-icon-container {
+  display: grid;
+  place-items: center;
+}
+
+.user-selected-guild-icon {
+  height: 24rem;
+  border-radius: 0.75rem;
+}
+
+.user-selected-guild-details {
+  margin-top: 0.75rem;
+  width: 20rem;
+}
+
+.user-selected-guild-title {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.guilds-list {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  width: 45.5rem;
+}
+
+.guilds-list-item {
+  border-bottom-width: 4px;
+  padding: 0.75rem;
+}
+
+.guilds-list-item:hover {
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity));
+}
+
+.guilds-list-item-link {
+  display: flex;
+}
+
+.guilds-list-item-icon {
+  height: 4rem;
+  border-radius: 0.5rem;
+}
+
+.guilds-list-item-details {
+  margin-left: 0.75rem;
+}
+
+.guilds-list-item-title {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 /* ADMIN PANEL PAGE */
