--- a/tailwindcss/src/tailwind.input.styles.css
+++ b/tailwindcss/src/tailwind.input.styles.css
@@ -53,6 +53,46 @@
   scrollbar-width: none;
 }
 
+/* LOGIN PAGE */
+
+.login-page {
+  @apply bg-yellow-400
+  text-neutral-900
+  w-340
+  h-162
+  rounded-lg
+  overflow-hidden
+  grid
+  place-items-center
+  p-2;
+}
+
+.application-title {
+  @apply text-8xl;
+}
+
+.login-page-greeting-msg {
+  @apply text-6xl;
+}
+
+.login-form {
+  @apply grid place-items-center gap-6;
+}
+
+.user-instruction {
+  @apply text-2xl;
+}
+
+.user-login-input {
+  @apply text-neutral-900 p-2 rounded-lg w-96;
+}
+
+.login-btn {
+  @apply text-neutral-50 bg-gray-600 hover:bg-gray-500 cursor-pointer rounded-lg w-28 px-4 py-2;
+}
+
+/* DASHBOARD PAGE */
+
 .dashboard-background {
   @apply bg-gradient-to-r
   from-slate-500
@@ -71,7 +111,12 @@
   h-162
   rounded-lg
   overflow-hidden
-  flex flex-col;
+  flex flex-col
+  relative;
+}
+
+.dashboard-side-nav {
+  @apply absolute bg-gray-700 h-full;
 }
 
 .dashboard-header {
@@ -100,11 +145,7 @@
 }
 
 .dashboard-selected-tab-content {
-  @apply bg-gray-500 w-5/6 justify-self-center p-8;
-}
-
-.my-profile-tab {
-  @apply text-xl;
+  @apply bg-gray-500 w-5/6 justify-self-center p-8 text-xl;
 }
 
 .rank-gold-bar {
@@ -206,6 +247,52 @@
 
 .dashboard-tab-icon {
   @apply fill-gray-400 h-8 hover:fill-yellow-400;
+}
+
+/* GUILDS TAB */
+
+.guilds-tab {
+  @apply grid place-items-center;
+}
+
+.user-selected-guild-icon-container {
+  @apply grid place-items-center;
+}
+
+.user-selected-guild-icon {
+  @apply h-96 rounded-xl;
+}
+
+.user-selected-guild-details {
+  @apply w-80 mt-3;
+}
+
+.user-selected-guild-title {
+  @apply text-3xl;
+}
+
+.guilds-list {
+  @apply mt-12 flex flex-col gap-5 w-182;
+}
+
+.guilds-list-item {
+  @apply hover:rounded-xl p-3 hover:bg-yellow-400 hover:text-neutral-900 border-b-4;
+}
+
+.guilds-list-item-link {
+  @apply flex;
+}
+
+.guilds-list-item-icon {
+  @apply h-16 rounded-lg;
+}
+
+.guilds-list-item-details {
+  @apply ml-3;
+}
+
+.guilds-list-item-title {
+  @apply text-3xl;
 }
 
 /* ADMIN PANEL PAGE */
