--- a/baseapp/static/baseapp/css/tailwind.output.styles.css
+++ b/baseapp/static/baseapp/css/tailwind.output.styles.css
@@ -541,6 +541,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 1px;
 }
 
+.bg-violet-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
+}
+
+.bg-indigo-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
+}
+
 .filter {
   filter: var(--tw-filter);
 }
@@ -556,6 +566,21 @@ Ensure the default browser behavior of the `hidden` attribute.
 .no-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+/* BASE */
+
+.app-background {
+  display: grid;
+  height: 100vh;
+  place-items: center;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #64748b;
+  --tw-gradient-stops: var(--tw-gradient-from), #94a3b8, var(--tw-gradient-to, rgb(148 163 184 / 0));
+  --tw-gradient-to: #cbd5e1;
+  font-family: Acme, sans-serif;
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
 /* LOGIN PAGE */
@@ -623,19 +648,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 /* DASHBOARD PAGE */
-
-.dashboard-background {
-  display: grid;
-  height: 100vh;
-  place-items: center;
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-  --tw-gradient-from: #64748b;
-  --tw-gradient-stops: var(--tw-gradient-from), #94a3b8, var(--tw-gradient-to, rgb(148 163 184 / 0));
-  --tw-gradient-to: #cbd5e1;
-  font-family: Acme, sans-serif;
-  --tw-text-opacity: 1;
-  color: rgb(250 250 250 / var(--tw-text-opacity));
-}
 
 .dashboard {
   position: relative;
