--- a/baseapp/templates/baseapp/guilds-tab.html
+++ b/baseapp/templates/baseapp/guilds-tab.html
@@ -17,98 +17,7 @@
   <h2 class="user-selected-guild-title">Typhoon</h2>
   <p class="user-selected-guild-xp">248 XP</p>
 </div>
-</div>
-<ul class="guilds-list">
-<li class="guilds-list-item">
-  <a href="" class="guilds-list-item-link">
-    <div class="guilds-list-item-icon-container">
-      <img
-        class="guilds-list-item-icon"
-        src="{% static 'baseapp/asset/icon/callisto-guild-icon.svg' %}"
-        alt=""
-      />
-    </div>
-    <div class="guilds-list-item-details">
-      <p class="guilds-list-item-title">Callisto</p>
-      <p class="guilds-list-item-xp">110 XP</p>
-    </div>
-  </a>
-</li>
-<li class="guilds-list-item">
-  <a href="" class="guilds-list-item-link">
-    <div class="guilds-list-item-icon-container">
-      <img
-        class="guilds-list-item-icon"
-        src="{% static 'baseapp/asset/icon/cerberus-guild-icon.svg' %}"
-        alt=""
-      />
-    </div>
-    <div class="guilds-list-item-details">
-      <p class="guilds-list-item-title">Cerberus</p>
-      <p class="guilds-list-item-xp">150 XP</p>
-    </div>
-  </a>
-</li>
-<li class="guilds-list-item">
-  <a href="" class="guilds-list-item-link">
-    <div class="guilds-list-item-icon-container">
-      <img
-        class="guilds-list-item-icon"
-        src="{% static 'baseapp/asset/icon/nemean-guild-icon.svg' %}"
-        alt=""
-      />
-    </div>
-    <div class="guilds-list-item-details">
-      <p class="guilds-list-item-title">Nemean</p>
-      <p class="guilds-list-item-xp">175 XP</p>
-    </div>
-  </a>
-</li>
-<li class="guilds-list-item">
-  <a href="" class="guilds-list-item-link">
-    <div class="guilds-list-item-icon-container">
-      <img
-        class="guilds-list-item-icon"
-        src="{% static 'baseapp/asset/icon/phoenix-guild-icon.svg' %}"
-        alt=""
-      />
-    </div>
-    <div class="guilds-list-item-details">
-      <p class="guilds-list-item-title">Phoenix</p>
-      <p class="guilds-list-item-xp">135 XP</p>
-    </div>
-  </a>
-</li>
-<li class="guilds-list-item">
-  <a href="" class="guilds-list-item-link">
-    <div class="guilds-list-item-icon-container">
-      <img
-        class="guilds-list-item-icon"
-        src="{% static 'baseapp/asset/icon/pegasus-guild-icon.svg' %}"
-        alt=""
-      />
-    </div>
-    <div class="guilds-list-item-details">
-      <p class="guilds-list-item-title">Pegasus</p>
-      <p class="guilds-list-item-xp">120 XP</p>
-    </div>
-  </a>
-</li>
-<li class="guilds-list-item">
-  <a href="" class="guilds-list-item-link">
-    <div class="guilds-list-item-icon-container">
-      <img
-        class="guilds-list-item-icon"
-        src="{% static 'baseapp/asset/icon/serpens-guild-icon.svg' %}"
-        alt=""
-      />
-    </div>
-    <div class="guilds-list-item-details">
-      <p class="guilds-list-item-title">Serpens</p>
-      <p class="guilds-list-item-xp">180 XP</p>
-    </div>
-  </a>
-</li>
-</ul>
+</div class="guilds-content">
+  {% block guilds_content %} {% endblock %}
 </div>
 {% endblock %}
