--- a/baseapp/templates/baseapp/guilds-components/guilds-list.html
+++ b/baseapp/templates/baseapp/guilds-components/guilds-list.html
@@ -2,6 +2,18 @@
 
 {% load static %}
 
+{% block guild_tab_header_content %}
+<div class="user-selected-guild">
+  <div class="user-selected-guild-icon-container">
+
+  </div>
+</div>
+{% endblock %}
+<img
+  class="user-selected-guild-icon"
+  src="{{ user.user_guild.guild_image.url }}"
+/>
+
 {% block guilds_content %}
 <ul class="guilds-list">
   {% for guild_item in guild %}
@@ -21,80 +33,5 @@
     </a>
   </li>
   {% endfor %}
-  <!-- <li class="guilds-list-item">
-    <a href="" class="guilds-list-item-link">
-      <div class="guilds-list-item-icon-container">
-        <img
-          class="guilds-list-item-icon"
-          src="{% static 'baseapp/asset/icon/cerberus-guild-icon.svg' %}"
-          alt=""
-        />
-      </div>
-      <div class="guilds-list-item-details">
-        <p class="guilds-list-item-title">Cerberus</p>
-        <p class="guilds-list-item-xp">150 XP</p>
-      </div>
-    </a>
-  </li>
-  <li class="guilds-list-item">
-    <a href="" class="guilds-list-item-link">
-      <div class="guilds-list-item-icon-container">
-        <img
-          class="guilds-list-item-icon"
-          src="{% static 'baseapp/asset/icon/nemean-guild-icon.svg' %}"
-          alt=""
-        />
-      </div>
-      <div class="guilds-list-item-details">
-        <p class="guilds-list-item-title">Nemean</p>
-        <p class="guilds-list-item-xp">175 XP</p>
-      </div>
-    </a>
-  </li>
-  <li class="guilds-list-item">
-    <a href="" class="guilds-list-item-link">
-      <div class="guilds-list-item-icon-container">
-        <img
-          class="guilds-list-item-icon"
-          src="{% static 'baseapp/asset/icon/phoenix-guild-icon.svg' %}"
-          alt=""
-        />
-      </div>
-      <div class="guilds-list-item-details">
-        <p class="guilds-list-item-title">Phoenix</p>
-        <p class="guilds-list-item-xp">135 XP</p>
-      </div>
-    </a>
-  </li>
-  <li class="guilds-list-item">
-    <a href="" class="guilds-list-item-link">
-      <div class="guilds-list-item-icon-container">
-        <img
-          class="guilds-list-item-icon"
-          src="{% static 'baseapp/asset/icon/pegasus-guild-icon.svg' %}"
-          alt=""
-        />
-      </div>
-      <div class="guilds-list-item-details">
-        <p class="guilds-list-item-title">Pegasus</p>
-        <p class="guilds-list-item-xp">120 XP</p>
-      </div>
-    </a>
-  </li>
-  <li class="guilds-list-item">
-    <a href="" class="guilds-list-item-link">
-      <div class="guilds-list-item-icon-container">
-        <img
-          class="guilds-list-item-icon"
-          src="{% static 'baseapp/asset/icon/serpens-guild-icon.svg' %}"
-          alt=""
-        />
-      </div>
-      <div class="guilds-list-item-details">
-        <p class="guilds-list-item-title">Serpens</p>
-        <p class="guilds-list-item-xp">180 XP</p>
-      </div>
-    </a>
-  </li> -->
 </ul>
 {% endblock %}
