--- a/baseapp/templates/baseapp/guilds-tab.html
+++ b/baseapp/templates/baseapp/guilds-tab.html
@@ -6,12 +6,8 @@
 
 {% block tab_content %}
 <div class="guilds-tab">
-<div class="user-selected-guild">
-<div class="user-selected-guild-icon-container">
-  <img
-    class="user-selected-guild-icon"
-    src="{{ user.user_guild.guild_image.url }}"
-  />
+
+  {% block guild_tab_header_content %} {% endblock %}
 </div>
 <div class="user-selected-guild-details">
   <h2 class="user-selected-guild-title">{{ user.user_guild.guild_name }}</h2>
@@ -19,5 +15,6 @@
 </div>
 </div class="guilds-content">
   {% block guilds_content %} {% endblock %}
+</div>
 </div>
 {% endblock %}
