--- a/baseapp/templates/baseapp/dashboard.html
+++ b/baseapp/templates/baseapp/dashboard.html
@@ -22,7 +22,7 @@
       <a href="#" class="dashboard-sidebar-links">Ranks</a>
       <a href="#" class="dashboard-sidebar-links">Balance</a>
       <a href="#" class="dashboard-sidebar-links">About</a>
-      <a href="#" class="dashboard-sidebar-links">Sign Out</a>
+      <a href="{% url 'logout' %}" class="dashboard-sidebar-links">Sign Out</a>
     </div>
     
     <!-- <div id="main" class="main-low">
