--- a/baseapp/templates/baseapp/index.html
+++ b/baseapp/templates/baseapp/index.html
@@ -26,6 +26,9 @@
       placeholder="Password"
     />
     <input type="submit" name="login" class="login-btn" value="Login" />
+    {% for message in messages %}
+      <p>{{ message }}</p>
+    {% endfor %}
   </form>
 </div>
 {% endblock %}
